--- a/src/style/page.css
+++ b/src/style/page.css
@@ -87,6 +87,9 @@ body {
 #panel-wrapper {
   position: relative;
   overflow: hidden;
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 .panel-container {
@@ -128,10 +131,6 @@ body {
 .panel-controls {
   display: flex;
   gap: 5px;
-}
-.panel-controls .btn {
-  padding: 4px 8px;
-  font-size: 12px;
 }
 
 .panel-filter {
