--- a/src/style/page.scss
+++ b/src/style/page.scss
@@ -88,6 +88,10 @@ body {
 #panel-wrapper {
     position: relative;
     overflow: hidden;
+    display: flex;
+    width: 100%;
+    height: 100%;
+
 }
 
 .panel-container {
@@ -132,11 +136,6 @@ body {
 .panel-controls {
     display: flex;
     gap: 5px;
-    
-    .btn {
-        padding: 4px 8px;
-        font-size: 12px;
-    }
 }
 
 .panel-filter {
