--- a/src/style/page.scss
+++ b/src/style/page.scss
@@ -110,10 +110,10 @@ body {
         transition: none !important;
     }
 }
-#pane1 {
+#panel1 {
 	border: 2px solid rgba(#4a90e2, 1);
 }
-#pane2{
+#panel2 {
 	border: 2px solid #c8d1d4;
 }
 
