--- a/src/style/page.css
+++ b/src/style/page.css
@@ -105,11 +105,11 @@ body {
   transition: none !important;
 }
 
-#pane1 {
+#panel1 {
   border: 2px solid #4a90e2;
 }
 
-#pane2 {
+#panel2 {
   border: 2px solid #c8d1d4;
 }
 
