--- a/src/style/page.css
+++ b/src/style/page.css
@@ -92,17 +92,22 @@ body {
   height: 100%;
 }
 
+#panel1, #panel2 {
+  height: 100%;
+  overflow: hidden;
+  border-radius: 5px;
+  transition: width 0.3s ease;
+}
+#panel1.no-transition, #panel2.no-transition {
+  transition: none !important;
+}
+
 .panel-container {
   display: flex;
   flex-direction: column;
   height: 100%;
   background: #fff;
   overflow: hidden;
-  border-radius: 5px;
-  transition: width 0.3s ease;
-}
-.panel-container.no-transition {
-  transition: none !important;
 }
 
 #panel1 {
